--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swamper",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "./lib/index.js",
   "description": "Tool for Web Workers",
   "keywords": [
@@ -14,7 +14,9 @@
   ],
   "homepage": "https://github.com/teniryte/swamper",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "promise-worker": "^2.0.1"
+  },
   "devDependencies": {
     "jest": "^26.6.3"
   },
