--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swamper",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "./lib/index.js",
   "description": "Tool for Web Workers",
   "keywords": [
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/teniryte/swamper",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.21",
     "promise-worker": "^2.0.1"
   },
   "devDependencies": {
