--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swamper",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "main": "./lib/index.js",
   "description": "Tool for Web Workers",
   "keywords": [
@@ -15,8 +15,7 @@
   "homepage": "https://github.com/teniryte/swamper",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.21",
-    "promise-worker": "^2.0.1"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "jest": "^26.6.3"
